--- a/mystyle.css
+++ b/mystyle.css
@@ -27,7 +27,7 @@ font-weight: bold;
 #div1
 {
 	font-size: 07.30vw;
-	 position: absolute;
+	 position: relative;
     top: 63%;
     left: 51%;
     transform: translate(-55%, -55%);
